Fixed clipping issue on project cards, added more detail to individual project descriptions

--- a/src/components/Profile/style.css
+++ b/src/components/Profile/style.css
@@ -13,7 +13,7 @@
 
 .profile-image {
   float: left;
-  margin: 5px 25px 10px 0;
+  margin: 10px 25px 10px 0;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.8), 0 6px 6px rgba(0, 0, 0, 0.5);
   position: relative;
