--- a/src/components/ProjectCard/style.css
+++ b/src/components/ProjectCard/style.css
@@ -5,9 +5,9 @@
 }
 
 .card {
-  width: 100%;
+  width: 95%;
   height: 200px;
-  margin-bottom: 20px;
+  margin: 0 10px 20px 10px;
   background: transparent;
   border: 2px solid #17a2b8;
   color: #17a2b8;
@@ -34,7 +34,7 @@
   text-align: left;
 }
 
-.contributors {
+.description, .contributors {
   font-size: 14px;
 }
 
